--- a/src/App.css
+++ b/src/App.css
@@ -10,21 +10,21 @@ body{
         border: 1px solid #dadde1;
         border-radius: 5px;
         max-width: 300px;
-        height: 550px;
-        padding: 16px;
-        margin: 20px auto;
+        height: 600px;
+        padding: 10px;
+        margin: 10px auto;
 }
 .InfoImage {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     position: relative;
-    left:40px;
-    top:10px ;
-  
+    left:70px;
+    
 }
 .InfoImage img {
     max-width: 100%;
     max-height: 100%;
+    border-radius: 2%;
    
        
 }
@@ -34,7 +34,7 @@ body{
     color: white;
     font-size: 26px;
     margin-bottom: 5px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .Info h4{
  
@@ -45,13 +45,13 @@ body{
             
 }
 .buttons a{
-    padding: 10px 30px;
+    display: block;
+    padding: 10px;
     margin: 10px;
     border: 1px solid #dadde1;
     border-radius: 4px;
     font-size: 12px;
     text-align: center;
-   display: block;
     letter-spacing: 1px;
     cursor: pointer;
     text-decoration:none ;
